--- a/angular-material.css
+++ b/angular-material.css
@@ -4994,9 +4994,7 @@ md-tabs-content-wrapper {
   overflow: hidden; }
 
 md-tab-content {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
+  display: block;
   position: absolute;
   top: 0;
   left: 0;
